--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,14 +3,13 @@ version: '3.8'
 services:
   web:
     build: .
-    ports:
-      - "8000:8000"
     volumes:
       - .:/app
       - static_volume:/app/staticfiles
     environment:
       - DEBUG=1
       - DATABASE_URL=sqlite:///db.sqlite3
+      - ALLOWED_HOSTS=savedrivenow.siber.live,
     depends_on:
       - db
 
@@ -28,7 +27,7 @@ services:
   nginx:
     image: nginx:alpine
     ports:
-      - "80:80"
+      - "8642:80"
     volumes:
       - ./nginx.conf:/etc/nginx/conf.d/default.conf
       - static_volume:/app/staticfiles
